--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "CloudKitchen",
   "version": "1.0.0",
@@ -19,7 +18,7 @@
   "devDependencies": {
     "@cap-js/sqlite": "^1.6.0",
     "@sap/cds-dk": "^7.9.1",
-    "@sap/ux-specification": "^1.120.11",
+    "@sap/ux-specification": "^1.120.13",
     "rimraf": "^3.0.2"
   },
   "scripts": {
@@ -27,7 +26,8 @@
     "watch-kitchen": "cds watch --open kitchen/webapp/index.html?sap-ui-xx-viewCache=false",
     "undeploy": "cf undeploy CloudKitchen --delete-services --delete-service-keys --delete-service-brokers",
     "build": "rimraf resources mta_archives && mbt build --mtar archive",
-    "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
+    "deploy": "cf deploy mta_archives/archive.mtar --retries 1",
+    "watch-productlocal": "cds watch --open productlocal/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
     "requires": {
@@ -60,6 +60,8 @@
     }
   },
   "sapux": [
-    "app/kitchen"
+    "app/kitchen",
+    "app/productlocal",
+    "app/productlocal"
   ]
 }
